[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -----------------
# 1. 패키지 기본 정보
# -----------------
[project]
name = "sayou-stock"
version = "0.0.3"
authors = [
    { name = "Sayouzone", email = "contact@sayouzone.com" },
]
description = ""
readme = "README.md"
license = { file = "./LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

# -----------------
# 2. 프로젝트 링크 (PyPI 사이드바)
# -----------------
[project.urls]
"Homepage" = "https://www.sayouzone.com/"
"Repository" = "https://github.com/sayouzone/sayou-fabric/tree/main/packages-dev/sayou-stock"

# -----------------
# 3. 소스 코드 위치
# -----------------
[tool.hatch.build.targets.wheel]
packages = ["src/sayou"]